--- a/index.html
+++ b/index.html
@@ -13,7 +13,13 @@
 </head>
 <body>
     <!-- Header -->
-    <header></header>
+    <header>
+        <div class="container flex-container">
+            <div class="header-section">Sezioni</div>
+            <div class="header-logo">Logo</div>
+            <div class="header-command">Icone</div>
+        </div>
+    </header>
     <!-- /Header -->
 
     <!-- Main -->
