structure of card in main

--- a/index.html
+++ b/index.html
@@ -14,16 +14,38 @@
 <body>
     <!-- Header -->
     <header>
+        <!-- Container -->
         <div class="container flex-container">
             <div class="header-section">Sezioni</div>
             <div class="header-logo">Logo</div>
             <div class="header-command">Icone</div>
         </div>
+        <!-- /Container -->
     </header>
     <!-- /Header -->
 
     <!-- Main -->
-    <main></main>
+    <main>
+        <!-- Container -->
+        <div class="container flex-container">
+            <div class="card">
+                <div class="top-card">
+                    <img class="cover-img" src="img/1.webp" alt="">
+                    <img  class="hover-img" src="img/1b.webp" alt="">
+                    <span class="heart">&hearts;</span>
+                    <span class="discount">-30%</span>
+                    <span class="bearableness">sostenibilità</span>
+                </div>
+                <div class="bottom-card">
+                    <span>Levi's</span>
+                    <h3>RELAXED FIT TEE UNISEX</h3>
+                    <span class="discounted-price">14,99$</span>
+                    <span class="price">29,99$</span>
+                </div>
+            </div>
+        </div>
+        <!-- /Container -->
+    </main>
     <!-- /Main -->
 
     <!-- Footer -->
