Structure of footer

--- a/index.html
+++ b/index.html
@@ -49,7 +49,14 @@
     <!-- /Main -->
 
     <!-- Footer -->
-    <footer></footer>
+    <footer>
+        <!-- Container -->
+        <div class="container flex-container">
+            <div class="footer-info"></div>
+            <div class="footer-social"></div>
+        </div>
+        <!-- /Container -->
+    </footer>
     <!-- /Footer -->
 </body>
 </html>
