details of the card

--- a/index.html
+++ b/index.html
@@ -16,9 +16,21 @@
     <header>
         <!-- Container -->
         <div class="container flex-container">
-            <div class="header-section">Sezioni</div>
-            <div class="header-logo">Logo</div>
-            <div class="header-command">Icone</div>
+            <div class="header-section">
+                <ul>
+                    <li><a href="">Donna</a></li>
+                    <li><a href="">Uomini</a></li>
+                    <li><a href="">Bambini</a></li>
+                </ul>
+            </div>
+            <div class="header-logo">
+                <img src="img/boolean-logo.png" alt="Logo Boolean">
+            </div>
+            <div class="header-command">
+                <i class="fa-regular fa-user"></i>
+                <i class="fa-regular fa-heart"></i>
+                <i class="fa-solid fa-bag-shopping"></i>
+            </div>
         </div>
         <!-- /Container -->
     </header>
@@ -30,11 +42,90 @@
         <div class="container flex-container">
             <div class="card">
                 <div class="top-card">
-                    <img class="cover-img" src="img/1.webp" alt="">
-                    <img  class="hover-img" src="img/1b.webp" alt="">
+                    <img class="cover-img" src="img/1.webp" alt="Cover photo levis">
+                    <img  class="hover-img" src="img/1b.webp" alt="Hover photo levis">
                     <span class="heart">&hearts;</span>
-                    <span class="discount">-30%</span>
-                    <span class="bearableness">sostenibilità</span>
+                    <div class="tag">
+                        <span class="discount">-30%</span>
+                        <span class="bearableness">sostenibilità</span>
+                    </div>
+                </div>
+                <div class="bottom-card">
+                    <span>Levi's</span>
+                    <h3>RELAXED FIT TEE UNISEX</h3>
+                    <span class="discounted-price">14,99$</span>
+                    <span class="price">29,99$</span>
+                </div>
+            </div>
+            <div class="card">
+                <div class="top-card">
+                    <img class="cover-img" src="img/2.webp" alt="Cover photo guess">
+                    <img  class="hover-img" src="img/2b.webp" alt="hover photo guess">
+                    <span class="heart">&hearts;</span>
+                    <div class="tag">
+                        <span class="discount">-30%</span>
+                    </div>
+                </div>
+                <div class="bottom-card">
+                    <span>Guess</span>
+                    <h3>ROSES TEE</h3>
+                    <span class="discounted-price">20,99$</span>
+                    <span class="price">29,99$</span>
+                </div>
+            </div>
+            <div class="card">
+                <div class="top-card">
+                    <img class="cover-img" src="img/3.webp" alt="Cover photo Come zucchero filato">
+                    <img  class="hover-img" src="img/3b.webp" alt="hover photo Come zucchero filato">
+                    <span class="heart">&hearts;</span>
+                    <div class="tag">
+                        <span class="discount">-30%</span>
+                    </div>
+                </div>
+                <div class="bottom-card">
+                    <span>Come Zucchero Filato</span>
+                    <h3>VOGLIA DI COLORI PASTELLO</h3>
+                    <span class="discounted-price">129,99$</span>
+                    <span class="price">184,99$</span>
+                </div>
+            </div>
+            <div class="card">
+                <div class="top-card">
+                    <img class="cover-img" src="img/4.webp" alt="">
+                    <img  class="hover-img" src="img/4b.webp" alt="">
+                    <span class="heart">&hearts;</span>
+                    <div class="tag">
+                        <span class="discount">-30%</span>
+                        <span class="bearableness">sostenibilità</span>
+                    </div>
+                </div>
+                <div class="bottom-card">
+                    <span>Levi's</span>
+                    <h3>RELAXED FIT TEE UNISEX</h3>
+                    <span class="discounted-price">14,99$</span>
+                    <span class="price">29,99$</span>
+                </div>
+            </div>
+            <div class="card">
+                <div class="top-card">
+                    <img class="cover-img" src="img/5.webp" alt="">
+                    <img  class="hover-img" src="img/5b.webp" alt="">
+                    <span class="heart">&hearts;</span>
+                </div>
+                <div class="bottom-card">
+                    <span>Levi's</span>
+                    <h3>RELAXED FIT TEE UNISEX</h3>
+                    <span class="discounted-price">99,99$</span>
+                </div>
+            </div>
+            <div class="card">
+                <div class="top-card">
+                    <img class="cover-img" src="img/6.webp" alt="">
+                    <img  class="hover-img" src="img/6b.webp" alt="">
+                    <span class="heart">&hearts;</span>
+                    <div class="tag">
+                        <span class="bearableness">sostenibilità</span>
+                    </div>
                 </div>
                 <div class="bottom-card">
                     <span>Levi's</span>
