--- a/index.html
+++ b/index.html
@@ -143,8 +143,22 @@
     <footer>
         <!-- Container -->
         <div class="container flex-container">
-            <div class="footer-info"></div>
-            <div class="footer-social"></div>
+            <div class="footer-info">
+                <h3>Booleando s.r.l</h3>
+                <ul>
+                    <li><a href="">informazioni legali</a></li>
+                    <li><a href="">informativa sulla privacy</a></li>
+                    <li><a href="">Diritto di recesso</a></li>
+                </ul>
+            </div>
+            <div class="footer-social">
+                <h4>Trovaci anche su</h4>
+                <i class="fa-brands fa-square-twitter"></i>
+                <i class="fa-brands fa-square-facebook"></i>
+                <i class="fa-brands fa-square-instagram"></i>
+                <i class="fa-brands fa-square-pinterest"></i>
+                <i class="fa-brands fa-square-youtube"></i>
+            </div>
         </div>
         <!-- /Container -->
     </footer>
